# palgo

./: .gitignore  algo.go  go.mod  hm1.typ  hm2.go  hm2.typ  hm3.go  hm3.typ  hm3_fixed.typ  hm4.typ  hm5.go  hm5.typ  hm6.typ  hm8.typ
cw1/: CMakeLists.txt  Makefile  README.md  main.cpp  main.go  par.go  seq.go  sort_par.go  sort_seq.go
cw2/: .gitignore  CMakeLists.txt  README.md  main.cpp
hm2/: hm2.go  hm2_fixes.typ
hm3/: hm3.go  hm3.typ  hm3_fixed.typ
hm4/: hm4.go  hm4.typ
hm5/: hm5.go  hm5.typ
hm6/: hm6.typ
hm7/: hm7.typ
hm8/: hm8.go
hm9/: hm9.typ  main.go
